<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_01_size" android:id="@+id/capsule_sleep_seat_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="47dp" android:text="@string/seat_move_hor" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:vuiMode="DISABLED" style="@style/TextStyle.title.Night"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/capsule_sleep_seat_number_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="63dp" android:src="@drawable/capsule_setup_icon_1" android:layout_marginStart="76dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/capsule_sleep_seat_title"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="40sp" android:textColor="@color/x_theme_primary_normal_night" android:gravity="center_vertical" android:id="@+id/capsule_sleep_seat_title_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seat_layflat_headrest_title" android:includeFontPadding="false" android:layout_marginStart="30dp" android:letterSpacing="0" app:layout_constraintBottom_toBottomOf="@+id/capsule_sleep_seat_number_1" app:layout_constraintStart_toEndOf="@+id/capsule_sleep_seat_number_1" app:layout_constraintTop_toTopOf="@+id/capsule_sleep_seat_number_1" app:layout_goneMarginStart="30dp" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/x_theme_text_03_night" android:id="@+id/capsule_sleep_seat_content_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/seat_layflat_headrest_content" app:layout_constraintStart_toStartOf="@+id/capsule_sleep_seat_title_1" app:layout_constraintTop_toBottomOf="@+id/capsule_sleep_seat_title_1" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/capsule_sleep_guide_seat_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/capsule_sleep_seat_guide_headrest" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/capsule_sleep_seat_content_1" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/capsule_sleep_seat_number_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="46dp" android:src="@drawable/capsule_setup_icon_2" app:layout_constraintStart_toStartOf="@+id/capsule_sleep_seat_number_1" app:layout_constraintTop_toBottomOf="@+id/capsule_sleep_guide_seat_img"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="40sp" android:textColor="@color/x_theme_primary_normal_night" android:gravity="center_vertical" android:id="@+id/capsule_sleep_seat_title_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seat_layflat_seat_title" android:includeFontPadding="false" android:layout_marginStart="30dp" android:letterSpacing="0" app:layout_constraintBottom_toBottomOf="@+id/capsule_sleep_seat_number_2" app:layout_constraintStart_toEndOf="@+id/capsule_sleep_seat_number_2" app:layout_constraintTop_toTopOf="@+id/capsule_sleep_seat_number_2"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_03_size" android:textColor="@color/x_theme_text_03_night" android:id="@+id/capsule_sleep_seat_content_2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/seat_layflat_seat_content" android:layout_marginEnd="64dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/capsule_sleep_seat_title_1" app:layout_constraintTop_toBottomOf="@+id/capsule_sleep_seat_title_2" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/capsule_sleep_guide_seat_img2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/capsule_sleep_seat_guide_backrest" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/capsule_sleep_seat_content_2" app:vuiMode="DISABLED"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_title_03_size" android:id="@+id/capsule_sleep_seat_btn" android:layout_width="448dp" android:layout_height="66dp" android:layout_marginBottom="44dp" android:text="@string/capsule_sleep_use_guide_next_btn" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/XButton.Real.Mid.Positive.Night"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
